[package]
name = "transaction_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
uuid = { version = "1.9.1", features = ["v4"]}
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bcrypt = "0.15.1" # For password hashing
thiserror = "1.0.61"
